# minecraftclient

./: .gitignore  BUILD_JAR_NOW.md  FABRIC_BUILD_ALTERNATIVE.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  QUICK_BUILD_WITH_GITHUB.md
.github/workflows/: build.yml
cpp-system/: build.bat  build_direct.bat  build_injector.bat  build_injector.ps1  build_run.ps1
cpp-system/dll/: imgui_overlay.cpp  imgui_overlay.h  ingame_overlay.cpp  ingame_overlay.h  main.cpp  main_imgui.cpp  main_ingame.cpp  opengl_hook.cpp  opengl_hook.h
cpp-system/injector/: main.cpp
doc/: BUILD_GUIDE.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  IMGUI_IMPLEMENTATION.md  IMGUI_QUICK_START.md  IMGUI_README.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IN_GAME_HUD_APPROACH.md  README.md  README_VAPE.md  START_HERE.md  VALIDATION_CHECKLIST.md  VAPE_IMPLEMENTATION_PLAN.md
fabric-mod/: README.md  SETUP.md  VAPE_STYLE_GUIDE.md  build-with-gradle.bat  build.bat  build.gradle  gradle.properties  gradlew  gradlew.bat  init-gradle.bat  settings.gradle
fabric-mod/src/client/java/com/espmod/: ESPModClient.java
fabric-mod/src/client/resources/: espmod.mixins.json
fabric-mod/src/main/java/com/espmod/: ESPModClient.java
fabric-mod/src/main/java/com/espmod/mixin/: GameRendererMixin.java
fabric-mod/src/main/java/com/espmod/ui/: HudRenderer.java
fabric-mod/src/main/resources/: fabric.mod.json
